--- a/src/app/ui/forms/sub-form-file/sub-form-file.component.scss
+++ b/src/app/ui/forms/sub-form-file/sub-form-file.component.scss
@@ -3,28 +3,21 @@
 @include styles.form-input($name: 'sub-form-file');
 
 .sub-form-file {
-  &__input {
+  display: grid;
+  grid-template-columns: auto min-content;
+  gap: styles.$box-pad-base;
+
+  &__handle {
     display: none;
   }
 
-  .button {
-    width: 100%;
-    justify-content: flex-start;
+  &__button {
+    display: block;
+    cursor: pointer;
   }
 
   &__image {
-    width: styles.func-toRem(12);
-    height: styles.func-toRem(12);
-    margin: 0 auto styles.$box-mrg-onehalf;
+    width: styles.func-toRem(2.85);
+    height: styles.func-toRem(2.85);
   }
-}
-
-@media (min-width: styles.$bkp-tablet) {
-  
-.sub-form-file {
-  &__image {
-    width: styles.func-toRem(15);
-    height: styles.func-toRem(15);
-  }
-}
 }
