--- a/src/app/ui/_styles/_forms.scss
+++ b/src/app/ui/_styles/_forms.scss
@@ -11,10 +11,10 @@
 
     &__label {
       background-color: color.$bg-lighter;
-      border-radius: box.$rad-large;
+      border-radius: box.$rad-rounded;
       border: box.$bor-solid color.$bor-light;
       column-gap: box.$pad-half;
-      padding: box.$pad-half;
+      padding: box.$pad-quarter box.$pad-base;
       transition: animation.$ease;
 
       align-items: center;
