--- a/src/app/ui/blocks/forgot-password/forgot-password.component.html
+++ b/src/app/ui/blocks/forgot-password/forgot-password.component.html
@@ -1,8 +1,8 @@
 <div class="forgot-password">
   <mr-home-background class="register-content__background"></mr-home-background>
-  <mr-card>
+  <mr-card class="forgot-password__card">
     <mr-form-forgot-password
-      (dataOutput)="handleForgotPassword($event)"
+    (dataOutput)="handleForgotPassword($event)"
     ></mr-form-forgot-password>
   </mr-card>
 </div>
