--- a/src/app/ui/blocks/forgot-password/forgot-password.component.scss
+++ b/src/app/ui/blocks/forgot-password/forgot-password.component.scss
@@ -4,6 +4,11 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+
+  &__card {
+    position: relative;
+    z-index: 4;
+  }
   
   &__background {
     position: absolute;
