Added implementation to fetch database channels

--- a/src/app/ui/blocks/channels-content/channels-content.component.html
+++ b/src/app/ui/blocks/channels-content/channels-content.component.html
@@ -1,23 +1,23 @@
 <div class="channels-content">
   <mr-channels-background
     class="channels-content__background"
-    [bannerImage]="channel.banner"
+    [bannerImage]="channel?.banner?.url"
   ></mr-channels-background>
 
   <div class="channels-content__info">
     <figure class="channels-content__image">
-      <mr-image [image]="channel.icon" [alt]="'bg-channels'"></mr-image>
+      <mr-image [image]="channel?.icon?.url" [alt]="'bg-channels'"></mr-image>
     </figure>
 
     <div class="channels-content__text">
       <mr-text
         [type]="'line'"
-        [text]="channel.name"
+        [text]="channel?.name"
         [size]="'extra-large'"
         [weight]="'bold'"
         class="channels-content__text--large"
       ></mr-text>
-      <mr-text [text]="channel.description" [size]="'extra-large'"></mr-text>
+      <mr-text [text]="channel?.description" [size]="'extra-large'"></mr-text>
     </div>
   </div>
 
