--- a/src/app/ui/elements/item-menu/item-menu.component.html
+++ b/src/app/ui/elements/item-menu/item-menu.component.html
@@ -1,6 +1,6 @@
 <div (click)="navigateToChannel(item.link)" class="item-menu">
   <figure class="item-menu__image">
-    <mr-image [image]="item?.icon | noimage" [alt]="'logo-item'" [rounded]="'circle'"></mr-image>
+    <mr-image [image]="item?.icon?.url | noimage" [alt]="'logo-item'" [rounded]="'circle'"></mr-image>
   </figure>
   <div class="item-menu__label">
     <mr-text [text]="item?.name" [weight]="'bold'" [size]="'base'"></mr-text>
