--- a/src/app/ui/blocks/slider/slider.component.html
+++ b/src/app/ui/blocks/slider/slider.component.html
@@ -1,15 +1,16 @@
 <div class="sliders">
   <swiper
-    [slidesPerView]="3" 
-    [spaceBetween]="50" 
+    [slidesPerView]="3"
+    [spaceBetween]="50"
     [virtual]="true"
     [navigation]="true"
     [pagination]="{ clickable: true }"
     [scrollbar]="{ draggable: true }"
+    [autoplay]="true"
   >
     <ng-container *ngFor="let slide of items; index as i">
       <ng-template swiperSlide>
-        <div class="sliders" (click)="handleRedirect(slide.url)">
+        <div class="sliders__card" (click)="handleRedirect(slide.url)">
           <figure class="sliders__image">
             <mr-image [image]="slide.image.url"></mr-image>
           </figure>
