Layout register was updated

--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -1,192 +1,187 @@
 <form class="form-user" [formGroup]="form.formGroup">
-  <div>
-    <fieldset class="form-user__section">
-      <mr-sub-form-input 
-        [type]="'input'"
-        [label]="'Nombres*'"
-        [formControlName]="form.formControlNames.firstName"
-      ></mr-sub-form-input>
-  
-      <mr-sub-form-input 
-        [type]="'input'"
-        [label]="'Apellidos*'"
-        [formControlName]="form.formControlNames.lastName"
-      ></mr-sub-form-input>
-  
-      <mr-sub-form-input 
-        [type]="'input'"
-        [label]="'Correo*'"
-        [placeholder]="'mujer@email.com...'"
-        [formControlName]="form.formControlNames.email"
-      ></mr-sub-form-input>
+  <fieldset class="form-user__section">
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Nombres*'"
+      [formControlName]="form.formControlNames.firstName"
+    ></mr-sub-form-input>
 
-      <mr-sub-form-input 
-        [type]="'number'"
-        [label]="'Edad*'"
-        [formControlName]="form.formControlNames.age"
-      ></mr-sub-form-input>
-  
-      <mr-sub-form-input 
-        [type]="'number'"
-        [label]="'Celular*'"
-        [formControlName]="form.formControlNames.phoneNumber"
-      ></mr-sub-form-input>
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Apellidos*'"
+      [formControlName]="form.formControlNames.lastName"
+    ></mr-sub-form-input>
 
-      <mr-sub-form-select
-        [label]="'Estado civil*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="maritalStatus"
-        [isSearchable]="true"
-        [formControlName]="form.formControlNames.maritalStatus"
-      ></mr-sub-form-select>
-      
-      
-      <mr-sub-form-select
-        [label]="'Tipo de documento*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="documents"
-        [isSearchable]="true"
-        [formControlName]="form.formControlNames.documentType"
-      ></mr-sub-form-select>
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Correo*'"
+      [placeholder]="'mujer@email.com...'"
+      [formControlName]="form.formControlNames.email"
+    ></mr-sub-form-input>
 
-      <mr-sub-form-input 
-        [type]="'number'"
-        [label]="'Número de identificación*'"
-        [formControlName]="form.formControlNames.documentNumber"
-      ></mr-sub-form-input>
-      
-      <mr-sub-form-multi-select
-        [label]="'Sostenimiento*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="sustenting"
-        [isSearchable]="true"
-        [canResetForm]="canResetForm"
-        [formControlName]="form.formControlNames.sustaining"
-      ></mr-sub-form-multi-select>
+    <mr-sub-form-input 
+      [type]="'number'"
+      [label]="'Celular*'"
+      [formControlName]="form.formControlNames.phoneNumber"
+    ></mr-sub-form-input>
 
-      <mr-sub-form-multi-select
-        [label]="'Grupo étnico*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="ethnicGroups"
-        [isSearchable]="true"
-        [canResetForm]="canResetForm"
-        [formControlName]="form.formControlNames.ethnicGroup"
-        ></mr-sub-form-multi-select>
+    <mr-sub-form-select
+      [label]="'Tipo de documento*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="documents"
+      [isSearchable]="true"
+      [formControlName]="form.formControlNames.documentType"
+    ></mr-sub-form-select>
+
+    <mr-sub-form-input 
+      [type]="'number'"
+      [label]="'Número de identificación*'"
+      [formControlName]="form.formControlNames.documentNumber"
+    ></mr-sub-form-input>
+
+    <mr-sub-form-input 
+      [type]="'number'"
+      [label]="'Edad*'"
+      [formControlName]="form.formControlNames.age"
+    ></mr-sub-form-input>
+
+
+    <mr-sub-form-select
+      [label]="'Estado civil*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="maritalStatus"
+      [isSearchable]="true"
+      [formControlName]="form.formControlNames.maritalStatus"
+    ></mr-sub-form-select>
     
-      <mr-sub-form-multi-select
-        [label]="'Hobbies'"
-        [placeholder]="'Seleccionar...'"
-        [options]="hobbies"
-        [isSearchable]="true"
-        [canResetForm]="canResetForm"
-        [formControlName]="form.formControlNames.hobbies"
-      ></mr-sub-form-multi-select>
 
-      <mr-sub-form-input 
-        [type]="'input'"
-        [label]="'Instagram'"
-        [formControlName]="form.formControlNames.instagram"
-      ></mr-sub-form-input>
+    
+    <mr-sub-form-multi-select
+      [label]="'Sostenimiento*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="sustenting"
+      [isSearchable]="true"
+      [canResetForm]="canResetForm"
+      [formControlName]="form.formControlNames.sustaining"
+    ></mr-sub-form-multi-select>
 
-      <mr-sub-form-input 
-        [type]="'input'"
-        [label]="'Facebook'"
-        [formControlName]="form.formControlNames.instagram"
-      ></mr-sub-form-input>
+    <mr-sub-form-multi-select
+      [label]="'Grupo étnico*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="ethnicGroups"
+      [isSearchable]="true"
+      [canResetForm]="canResetForm"
+      [formControlName]="form.formControlNames.ethnicGroup"
+    ></mr-sub-form-multi-select>
 
-      <mr-sub-form-select
-        [label]="'Personas del núcleo*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="familyCore"
-        [isSearchable]="true"
-        [formControlName]="form.formControlNames.familyCore"
-      ></mr-sub-form-select>
+    <mr-sub-form-select
+      [label]="'Personas del núcleo*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="familyCore"
+      [isSearchable]="true"
+      [formControlName]="form.formControlNames.familyCore"
+    ></mr-sub-form-select>
 
-      <mr-sub-form-select
-        [label]="'Ingresos familiares*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="familyIncome"
-        [isSearchable]="true"
-        [formControlName]="form.formControlNames.familyIncome"
-      ></mr-sub-form-select>
+    <mr-sub-form-select
+      [label]="'Ingresos familiares*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="familyIncome"
+      [isSearchable]="true"
+      [formControlName]="form.formControlNames.familyIncome"
+    ></mr-sub-form-select>
 
-      <mr-sub-form-select
-        [label]="'Tipo de vivienda*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="housingType"
-        [isSearchable]="true"
-        [formControlName]="form.formControlNames.housingType"
-      ></mr-sub-form-select>
+    <mr-sub-form-select
+      [label]="'Tipo de vivienda*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="housingType"
+      [isSearchable]="true"
+      [formControlName]="form.formControlNames.housingType"
+    ></mr-sub-form-select>
 
-      <mr-sub-form-select
-        [label]="'Nivel de estudios*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="education"
-        [isSearchable]="true"
-        [formControlName]="form.formControlNames.education"
-      ></mr-sub-form-select>
+    <mr-sub-form-select
+      [label]="'Nivel de estudios*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="education"
+      [isSearchable]="true"
+      [formControlName]="form.formControlNames.education"
+    ></mr-sub-form-select>
 
-      <mr-sub-form-select
-        [label]="'Estrato*'"
-        [placeholder]="'Seleccionar...'"
-        [options]="stratum"
-        [isSearchable]="true"
-        [formControlName]="form.formControlNames.stratum"
-      ></mr-sub-form-select>
-    </fieldset>
-  
-    <fieldset class="form-user__location">
-      <mr-sub-form-location
-        [cities]="cities"
-        [states]="states"
-        [formControlName]="form.formControlNames.location"
-      ></mr-sub-form-location>
-    </fieldset>
-  
-    <fieldset class="form-user__description">
-      <mr-sub-form-input 
-        [type]="'input'"
-        [label]="'Dirección*'"
-        [formControlName]="form.formControlNames.address"
-      ></mr-sub-form-input>
+    <mr-sub-form-select
+      [label]="'Estrato*'"
+      [placeholder]="'Seleccionar...'"
+      [options]="stratum"
+      [isSearchable]="true"
+      [formControlName]="form.formControlNames.stratum"
+    ></mr-sub-form-select>
 
-      <mr-sub-form-input 
-        [type]="'input'"
-        [label]="'Código promocional'"
-        [formControlName]="form.formControlNames.promocionalCode"
-      ></mr-sub-form-input>
+    <mr-sub-form-location
+      [cities]="cities"
+      [states]="states"
+      [formControlName]="form.formControlNames.location"
+    ></mr-sub-form-location>
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Dirección*'"
+      [formControlName]="form.formControlNames.address"
+    ></mr-sub-form-input>
 
-      <mr-sub-form-textarea 
-        [text]="'Presentación personal*'"
-        [placeholder]="'Yo soy...'"
-        [formControlName]="form.formControlNames.description"
-      ></mr-sub-form-textarea>
+    <div class="form-user__files">
+      <mr-sub-form-file
+        [label]="'Adjuntar imagen de perfil*'"
+        [canResetImage]="canResetForm"
+        [formControlName]="form.formControlNames.image"
+      ></mr-sub-form-file>
 
-      <mr-sub-form-textarea 
-        [text]="'¿Por dónde conociste Mujeres Rofé?*'"
-        [formControlName]="form.formControlNames.disclosure"
-      ></mr-sub-form-textarea>
-    </fieldset>
-  </div>
+      <mr-sub-form-file
+        [label]="'Adjuntar foto o scan de la cédula*'"
+        [canResetImage]="canResetForm"
+        [formControlName]="form.formControlNames.documentImage"
+      ></mr-sub-form-file>
+    </div>
+    
+    <mr-sub-form-textarea 
+      [text]="'Presentación personal*'"
+      [placeholder]="'Yo soy...'"
+      [formControlName]="form.formControlNames.description"
+    ></mr-sub-form-textarea>
 
-  <fieldset class="form-user__file">
-    <mr-sub-form-file
-      [label]="'Adjuntar imagen de perfil*'"
-      [canResetImage]="canResetForm"
-      [formControlName]="form.formControlNames.image"
-    ></mr-sub-form-file>
+    <mr-sub-form-textarea 
+      [text]="'¿Por dónde conociste Mujeres Rofé?*'"
+      [formControlName]="form.formControlNames.disclosure"
+    ></mr-sub-form-textarea>
 
-    <mr-sub-form-file
-      [label]="'Adjuntar foto o scan de la cédula*'"
-      [canResetImage]="canResetForm"
-      [formControlName]="form.formControlNames.documentImage"
-    ></mr-sub-form-file>
+    <mr-sub-form-multi-select
+      [label]="'Hobbies'"
+      [placeholder]="'Seleccionar...'"
+      [options]="hobbies"
+      [isSearchable]="true"
+      [canResetForm]="canResetForm"
+      [formControlName]="form.formControlNames.hobbies"
+    ></mr-sub-form-multi-select>
+
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Instagram'"
+      [formControlName]="form.formControlNames.instagram"
+    ></mr-sub-form-input>
+
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Facebook'"
+      [formControlName]="form.formControlNames.instagram"
+    ></mr-sub-form-input>
+
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Código promocional'"
+      [formControlName]="form.formControlNames.promocionalCode"
+    ></mr-sub-form-input>
   </fieldset>
 
-  <mr-button
-    class="form-user__button"
+  <mr-button 
+    class="form-user__button" 
     [label]="'Guardar'"
-    [isDisabled]="form.formGroup.invalid || form.formGroup.disabled"
+    [isDisabled]="form.formGroup.invalid || form.formGroup.disabled" 
     (clicked)="manualSave$.next()"
   ></mr-button>
 </form>
