--- a/src/app/ui/forms/form-user/form-user.component.scss
+++ b/src/app/ui/forms/form-user/form-user.component.scss
@@ -5,10 +5,7 @@
   gap: styles.$box-pad-base;
   align-items: center;
 
-  &__section,
-  &__location,
-  &__description,
-  &__file {
+  &__section {
     gap: styles.$box-pad-base;
     display: grid;
     min-width: 0;
@@ -17,18 +14,9 @@
     border: 0;
   }
 
-  &__location {
-    padding: styles.$box-pad-base styles.$box-pad-none;
-  }
-
-  &__description {
-    padding-bottom: styles.$box-pad-base;
-  }
-
-  &__file {
+  &__files {
     display: grid;
-    grid-template-columns: 1fr;
-    gap: styles.$box-pad-base;
+    row-gap: styles.$box-pad-base;
   }
 }
 
@@ -43,21 +31,8 @@
 
 @media (min-width: styles.$bkp-tablet) {
   .form-user {
-    grid-template-columns: repeat(2, styles.$box-fr-base);
-
-    &__section,
-    &__location,
-    &__description {
+    &__section{
       grid-template-columns: repeat(2, styles.$box-fr-base);
-    }
-
-
-    &__location {
-      grid-template-columns: styles.$box-fr-base;
-    }
-
-    &__description {
-      grid-template-columns: styles.$box-fr-base;
     }
   }
 }
