--- a/src/app/ui/blocks/forgot-password/forgot-password.component.html
+++ b/src/app/ui/blocks/forgot-password/forgot-password.component.html
@@ -1,8 +1,16 @@
 <div class="forgot-password">
   <mr-home-background class="register-content__background"></mr-home-background>
   <mr-card class="forgot-password__card">
+    <mr-text class="forgot-password__text" [text]="'Recordar contraseña'" [weight]="'bold'" [size]="'extra-large'"></mr-text>
+    <mr-text class="forgot-password__text" [text]="text" [size]="'medium'"></mr-text>
     <mr-form-forgot-password
-    (dataOutput)="handleForgotPassword($event)"
+      (dataOutput)="handleForgotPassword($event)"
     ></mr-form-forgot-password>
   </mr-card>
+
+  <mr-button-icon
+    [icon]="'arrow-left'"
+    (clicked)="handleToBack()"
+    class="forgot-password__back"
+  ></mr-button-icon>
 </div>
