--- a/src/app/ui/blocks/forgot-password/forgot-password.component.scss
+++ b/src/app/ui/blocks/forgot-password/forgot-password.component.scss
@@ -1,3 +1,5 @@
+@use "../../_styles/index.scss" as styles;
+
 .forgot-password {
   position: relative;
   display: flex;
@@ -9,6 +11,11 @@
     position: relative;
     z-index: 4;
   }
+
+  &__text {
+    display: block;
+    margin-bottom: styles.$box-mrg-base;
+  }
   
   &__background {
     position: absolute;
@@ -16,5 +23,50 @@
     top: 0;
     left: 0;
     width: 100%;
+  }
+
+  &__back {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    z-index: 1;
+    animation: animate 1s linear infinite;
+
+    & .button-icon {
+      height: styles.func-toRem(4) !important;
+      width: styles.func-toRem(4) !important;
+      font-size: styles.func-toRem(1.56);
+    }
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@media (max-width: styles.$bkp-mobile) {
+  .forgot-password {
+    &__back {
+      & .button-icon {
+        height: styles.func-toRem(3) !important;
+        width: styles.func-toRem(3) !important;
+        font-size: styles.func-toRem(1.20);
+      }
+    }
+  }
+}
+
+@media (min-width: styles.$bkp-tablet) {
+  .forgot-password {
+    width: 60%;
+    margin: 0 auto;
   }
 }
