--- a/src/app/ui/blocks/form-detail/form-detail.component.html
+++ b/src/app/ui/blocks/form-detail/form-detail.component.html
@@ -12,6 +12,6 @@
 
 <mr-button-icon
   [icon]="'arrow-left'"
-  (clicked)="handleGoBack()"
+  (clicked)="handleToBack()"
   class="admin-users__back"
 ></mr-button-icon>
