--- a/src/app/shared/admin/admin-users-list-container/admin-users-list-container.component.html
+++ b/src/app/shared/admin/admin-users-list-container/admin-users-list-container.component.html
@@ -38,5 +38,6 @@
       (updateUser)="handleUpdateUser($event)"
       (downloadUsers)="handleDownloadUsers()"
       (changePagePaginated)="handleLoadUsers($event)"
+      (filterByName)="handleFilterByName($event)"
     ></mr-admin-users-list>
 </ng-container>
