--- a/src/app/ui/blocks/register-content/register-content.component.html
+++ b/src/app/ui/blocks/register-content/register-content.component.html
@@ -3,6 +3,7 @@
   <mr-card class="register-content__form">
     <ng-container>
       <mr-form-user
+        [showCheckConditions]="true"
         [cities]="cities"
         [states]="states"
         [hobbies]="hobbies"
